# reconbridge

./: .gitattributes  .gitignore  .mcp.json.example  AGENTS_QUICKSTART.md  CMakeLists.txt  LICENSE  README.md  README_en.md  build.ps1  build_exe.ps1  install.ps1  install.sh  ndde.md  pack.ps1  reconbridge优化建议.md
m3/: HOOK_PROTOCOL.md  README.md  README_en.md  build_dobby_x86_64.ps1  dobby-android-build-fix.patch
m3/zygisk/: module.cpp
m4/: README.md  README_en.md
m4/templates/: anti_debug_ptrace.json  dump_dex_art.json  frida_xposed_locate.json  root_detection_locate.json
m5/: JAVA_HOOK_PROTOCOL.md  README.md  README_en.md  ReconBridge-Tracer.apk
m5/tracer/: gradle.properties  settings.gradle.kts
m5/tracer/app/: build.gradle.kts
m5/tracer/app/src/main/: AndroidManifest.xml
m5/tracer/app/src/main/assets/: xposed_init
m5/tracer/app/src/main/java/com/reconbridge/tracer/: HookEntry.kt  InjectSocket.kt  MainActivity.kt
m5/tracer/app/src/main/res/values/: strings.xml
module/: customize.sh  module.prop  rbctl  sepolicy.rule  service.sh
module/webroot/: index.html
pc/: README.md  README_en.md  mcp_entry.py  reconbridge-mcp.spec  requirements.txt  test_mcp_e2e.py
pc/reconbridge_mcp/: __init__.py  client.py  external.py  register.py  server.py  settings.py  webconsole.html  webconsole.py
scripts/: install-online.ps1  install_mcp.py  uninstall.ps1
skills/reconbridge/: SKILL.md
src/: daemon.cpp  dynamic.cpp  dynamic.h
